# jax_flow

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  ROBOMIMIC_MIMICGEN_RESEARCH.md  pyproject.toml
.claude/skills/benchmark/: SKILL.md
.claude/skills/commit-research/: SKILL.md
.claude/skills/debug-training/: SKILL.md
.claude/skills/eval/: SKILL.md
.claude/skills/experiment/: SKILL.md
.claude/skills/paper/: SKILL.md
.claude/skills/plot-results/: SKILL.md
.claude/skills/train/: SKILL.md
configs/: config.yaml  offline_rl_default.yaml  speed_tuning_config.yaml
configs/flow/: drift.yaml  flow_matching.yaml  imf.yaml  meanflow.yaml  meanflow_stable.yaml  mip.yaml
configs/network/: mlp.yaml  small_mlp.yaml  transformer.yaml  unet.yaml  unet_lowdim.yaml  vit.yaml
configs/offline_online/: acfql_default.yaml  ddpg_bc_default.yaml  dqc_default.yaml
configs/offline_rl/: default.yaml
configs/optimization/: default.yaml
configs/resfit/: default.yaml
configs/resfit/task/: square_image.yaml  square_lowdim.yaml
configs/speed_tuning/: default.yaml
configs/task/: can_image.yaml  can_lowdim.yaml  coffee_image.yaml  coffee_lowdim.yaml  dex_threading_image.yaml  dex_threading_lowdim.yaml  dex_three_piece_assembly_image.yaml  dex_three_piece_assembly_lowdim.yaml  dex_transport_image.yaml  dex_transport_lowdim.yaml  hammer_cleanup_image.yaml  hammer_cleanup_lowdim.yaml  kitchen_image.yaml  kitchen_lowdim.yaml  kitchen_state.yaml  lift_image.yaml  lift_lowdim.yaml  mug_cleanup_image.yaml  mug_cleanup_lowdim.yaml  nut_assembly_image.yaml  nut_assembly_lowdim.yaml  pick_place_image.yaml  pick_place_lowdim.yaml  pusht_image.yaml  pusht_keypoint.yaml  pusht_state.yaml  square_image.yaml  square_lowdim.yaml  stack_image.yaml  stack_lowdim.yaml  stack_three_image.yaml  stack_three_lowdim.yaml  threading_image.yaml  threading_lowdim.yaml  tool_hang_image.yaml  tool_hang_lowdim.yaml  transport_image.yaml  transport_lowdim.yaml
docs/: resfit_implementation_summary.md  resfit_plan.md
jax_flow/: __init__.py
jax_flow/agents/: __init__.py  acfql_agent.py  bc_agent.py  critic_state.py  offline_rl_agent.py  train_state.py
jax_flow/agents/IL_RLFiT/: __init__.py  resfit_agent.py
jax_flow/agents/offline_online/: __init__.py  acfql_agent.py  ddpg_bc_agent.py  dqc_agent.py  utils.py
jax_flow/agents/speed_tuning/: __init__.py  interpolation.py  networks.py  per_buffer.py  rainbow_agent.py  speed_tuning_env.py
jax_flow/core/: __init__.py  checkpoint.py  evaluation.py  pytree.py  types.py  utils.py
jax_flow/data/: __init__.py  dataset_manager.py  kitchen_dataset.py  normalizer.py  pusht_dataset.py  replay_buffer.py  resfit_replay_buffer.py  robomimic_dataset.py  robomimic_image_dataset.py  rotation_utils.py
jax_flow/envs/: __init__.py  mimicgen_compat.py  residual_wrapper.py  robomimic_env.py
jax_flow/envs/kitchen/: __init__.py  kitchen_wrapper.py
jax_flow/envs/pusht/: __init__.py  pusht_env.py  pusht_image_env.py  pusht_keypoints_env.py  pusht_wrapper.py  pymunk_keypoint_manager.py
jax_flow/flow/: __init__.py  interpolant.py  losses.py  samplers.py
jax_flow/networks/: __init__.py  embeddings.py  encoders.py  mlp.py  residual_actor.py  spatial_emb_actor.py  spatial_emb_critic.py  transformer.py  transformer_blocks.py  unet.py  unet_components.py  value.py
jax_flow/networks/encoders/: __init__.py  base.py  crop_randomizer.py  multi_image.py  pretrained_weights.py  random_shifts.py  resnet.py  spatial_softmax.py  vit.py
scripts/: convert_dexmimicgen.py  convert_mimicgen.py  create_all_configs.py  debug_speed_tuning.py  diagnose_speed_length.py  download_all_datasets.py  download_data.py  download_dexmimicgen.py  download_mimicgen.py  eval_bc.py  eval_fixed_speed.py  eval_speed_comparison.py  generate_image_dataset.py  test_action_distribution.py  train_acfql.py  train_bc.py  train_dqc.py  train_offline_rl.py  train_resfit.py  train_speed_tuning.py  visualize_pusht_trajectories.py
tests/: test_checkpoint_eval.py  test_image_pipeline.py  test_image_training_e2e.py
