[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_flow"
version = "0.1.0"
description = "JAX-based imitation learning framework with flow matching for robotic manipulation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["jax", "flow-matching", "imitation-learning", "robotics", "behavior-cloning"]

dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.1.9",
    "chex>=0.1.85",
    "jaxtyping>=0.2.25",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "h5py>=3.10.0",
    "tqdm>=4.66.0",
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pillow>=10.0.0",
    "imageio>=2.33.0",
    "opencv-python>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
]

robomimic = [
    "robomimic>=0.3.0",
    "robosuite>=1.4.0",
]

all = [
    "jax_flow[dev,robomimic]",
]

[project.urls]
Homepage = "https://github.com/yourusername/jax_flow"
Repository = "https://github.com/yourusername/jax_flow"
Documentation = "https://github.com/yourusername/jax_flow/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["jax_flow*"]

[tool.ruff]
line-length = 88  # 与 much-ado-about-noising 保持一致
indent-width = 4
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# 参考 much-ado-about-noising 的配置
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle (Google style docstrings)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D105",   # Missing docstring in magic method
    "D205",   # 1 blank line required between summary line and description
    "D415",   # First line should end with a period
    "D417",   # Missing argument descriptions in docstring
    "F722",   # 允许 jaxtyping 的字符串维度标注
    "F821",   # 允许 jaxtyping 的未定义名称（batch 等维度变量）
    "E731",   # 允许 lambda 表达式（JAX 闭包常用）
    "N802",   # Function name should be lowercase (数学符号)
    "N803",   # Argument name should be lowercase (数学符号)
    "N806",   # Variable in function should be lowercase (数学符号)
    "N812",   # Lowercase imported as non-lowercase
    "B007",   # Loop control variable not used within loop body
    "B008",   # Function call in default argument
    "SIM102", # Use single if statement instead of nested
    "SIM105", # Use contextlib.suppress instead of try-except-pass
    "SIM117", # Multiple with statements
    "UP007",  # Non-PEP604 annotation union
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["jax_flow"]
known-third-party = ["jax", "flax", "optax", "chex", "jaxtyping"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]  # 允许未使用的导入和 star imports
"tests/**/*.py" = ["B008", "B011"]  # 测试中允许函数调用作为默认参数

[tool.ruff.format]
# Use Google style formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=jax_flow",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]

[tool.pyright]
include = ["jax_flow", "scripts", "tests"]
exclude = [
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportGeneralTypeIssues = "none"  # JAX 的动态特性
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportPrivateImportUsage = "none"

[tool.coverage.run]
source = ["jax_flow"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]